Refactored ui of cart

--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -11,7 +11,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        
+        <TextView
+            android:id="@+id/txt_no_data_available"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/noDataAvailable"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/sofia_pro_semi_bold"
+            android:textSize="20sp">
+        </TextView>
         <ScrollView
             android:id="@+id/scroll_view"
             android:layout_width="0dp"
@@ -48,13 +59,13 @@
             android:id="@+id/btnCheckout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/scan_qr_code_circle_btn_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/checkout"
             app:cornerRadius="25dp"
             android:layout_marginEnd="35dp"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/sofia_pro_regular">
         </com.google.android.material.button.MaterialButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
