--- a/grabbit/app/src/main/res/layout/fragment_account.xml
+++ b/grabbit/app/src/main/res/layout/fragment_account.xml
@@ -14,13 +14,14 @@
             android:id="@+id/lin_lay_acc_1"
             android:layout_width="match_parent"
             android:layout_height="270dp"
-            android:background="@color/colorOrange"
+            android:background="@drawable/scan_qr_code_circle_btn_background"
             android:paddingTop="30dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <ImageView
