--- a/grabbit/app/src/main/res/values/colors.xml
+++ b/grabbit/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="colorHomeMenuBtnGrey">#f5f6ff</color>
     <color name="colorFaintGray">#d1ccbd</color>
     <color name="colorDarkGray">#8e8e93</color>
-    <color name="colorOrange">#f89326</color>
+    <color name="colorOrange">#ffbf00</color>
     <color name="colorDivider">#40767676</color>
     <color name="colorRed">#FE382D</color>
     <color name="drawerBg">#C7000000</color>
