--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@drawable/login"
     tools:context=".login.LoginActivity">
 
     <TextView
@@ -26,7 +26,7 @@
         android:layout_marginStart="30dp"
         android:text="Welcome \nBack"
         android:fontFamily="@font/sofia_pro_semi_bold"
-        android:textColor="@color/colorGrey"
+        android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_arrow"
@@ -62,7 +62,7 @@
             android:layout_marginStart="30dp"
             android:text="Sign in"
             android:fontFamily="@font/sofia_pro_semi_bold"
-            android:textColor="@color/colorGrey"
+            android:textColor="@color/colorDarkGray"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
+            android:drawableTint="@color/white"
             android:background="@drawable/scan_qr_code_circle_btn_background"
             android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
             android:padding="20dp"
