--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -78,7 +78,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@drawable/scan_qr_code_circle_btn_background"
-                style="@style/Widget.AppCompat.ImageButton">
+                android:foreground="?android:attr/selectableItemBackground"
+                >
             </ImageButton>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
