--- a/grabbit/app/src/main/res/drawable/scan_qr_code_circle_btn_background.xml
+++ b/grabbit/app/src/main/res/drawable/scan_qr_code_circle_btn_background.xml
@@ -5,7 +5,7 @@
             android:shape="rectangle">
             <corners android:radius="50dp"/>
             <gradient
-                android:startColor="@color/colorOrange"
+                android:startColor="#f89326"
                 android:endColor="#ffbf00"
                 />
         </shape>
@@ -14,7 +14,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <corners android:radius="50dp"/>
             <gradient
-                android:startColor="@color/colorOrange"
+                android:startColor="#f89326"
                 android:endColor="#ffbf00"
                 />
         </shape>
