--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     tools:context=".login.LoginActivity">
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/back_arrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
