--- a/grabbit/app/src/main/res/layout/fragment_account.xml
+++ b/grabbit/app/src/main/res/layout/fragment_account.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/back_arrow"
             android:layout_width="40dp"
             android:layout_height="40dp"
