--- a/grabbit/app/src/main/res/layout/bluetooth_device_list.xml
+++ b/grabbit/app/src/main/res/layout/bluetooth_device_list.xml
@@ -35,7 +35,7 @@
                 />
     </LinearLayout>
     <ImageButton
-        android:id="@+id/btn_add_item_to_cart"
+        android:id="@+id/btn_dispense_item"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/ic_compare_arrows_black_24dp"
