--- a/grabbit/app/src/main/res/layout/activity_home_bn.xml
+++ b/grabbit/app/src/main/res/layout/activity_home_bn.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:background="@color/windowBackground">
+        android:background="@drawable/gradientbackgroundprofile">
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Home"
             android:fontFamily="@font/sofia_pro_semi_bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"/>
     </com.google.android.material.appbar.AppBarLayout>
 
