--- a/grabbit/app/src/main/res/layout/activity_information.xml
+++ b/grabbit/app/src/main/res/layout/activity_information.xml
@@ -75,6 +75,7 @@
                     android:drawablePadding="5dp"
                     android:text="5000"
                     android:textSize="25sp"
+                    android:layout_marginBottom="25dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +84,9 @@
                     android:id="@+id/btn_add_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:src="@drawable/ic_wallet"/>
@@ -100,7 +104,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/linear_card_background"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/linear_ly_1">
@@ -109,12 +113,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sofia_pro_regular"
+                android:paddingTop="6dp"
                 android:text="Item purchased"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
-
-
-
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="45"
+                    android:textSize="25dp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/sofia_pro_semi_bold"
+                    android:gravity="end"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
