--- a/grabbit/app/src/main/res/layout/activity_item_dispense.xml
+++ b/grabbit/app/src/main/res/layout/activity_item_dispense.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20sp"/>
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <pl.droidsonroids.gif.GifImageView
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
