--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -89,11 +89,11 @@
         android:layout_width="match_parent"
         android:layout_marginStart="30dp"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="number"
         android:ems="15"
         android:textSize="14sp"
         android:id="@+id/edit_text_username"
-        android:hint="Username"
+        android:hint="Contact No"
         android:fontFamily="@font/sofia_pro_regular"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="40dp"
