--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="30dp"
         android:text="Create \naccount"
         android:fontFamily="@font/sofia_pro_semi_bold"
@@ -139,7 +139,7 @@
         android:drawablePadding="5dp"
         android:textColorHint="@color/white"/>
     <EditText
-        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintBottom_toTopOf="@id/ed_password"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -156,6 +156,34 @@
         android:paddingLeft="5dp"
         android:drawablePadding="5dp"
         android:textColorHint="@color/white"/>
-
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="15"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/ed_password"
+        android:fontFamily="@font/sofia_pro_regular"
+        android:inputType="textPassword"
+        android:hint="Password"
+        android:textSize="14sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/white"
+        android:paddingLeft="5dp"
+        android:drawablePadding="5dp"
+        android:textColorHint="@color/white" />
+    <ProgressBar
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/progressBarSignUp"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+    </ProgressBar>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
