--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -20,9 +20,10 @@
 
     </TextView>
     <TextView
+        android:id="@+id/txt_create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginStart="30dp"
         android:text="Create \naccount"
         android:fontFamily="@font/sofia_pro_semi_bold"
@@ -91,7 +92,7 @@
         android:inputType="text"
         android:ems="15"
         android:fontFamily="@font/sofia_pro_regular"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:id="@+id/edit_text_username"
         android:hint="Username"
         android:layout_marginBottom="15dp"
@@ -99,7 +100,7 @@
         android:layout_marginTop="50dp"
         android:textColor="@color/white"
         android:paddingLeft="5dp"
-        android:drawablePadding="15dp"
+        android:drawablePadding="18dp"
         android:textColorHint="@color/white"/>
 
     <EditText
@@ -113,7 +114,7 @@
         android:fontFamily="@font/sofia_pro_regular"
         android:id="@+id/edit_text_email"
         android:hint="Email"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="15dp"
         android:textColor="@color/white"
@@ -149,7 +150,7 @@
         android:id="@+id/edit_text_contactno"
         android:fontFamily="@font/sofia_pro_regular"
         android:hint="Contact no"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
         android:textColor="@color/white"
@@ -167,7 +168,7 @@
         android:fontFamily="@font/sofia_pro_regular"
         android:inputType="textPassword"
         android:hint="Password"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
         android:textColor="@color/white"
