--- a/grabbit/app/src/main/res/layout/activity_information.xml
+++ b/grabbit/app/src/main/res/layout/activity_information.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/welcome_msg"
+            android:id="@+id/txt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
@@ -51,7 +51,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcome_msg">
+            app:layout_constraintTop_toBottomOf="@id/txt_username">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
                 >
 
                 <TextView
-
+                    android:id="@+id/txt_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
@@ -116,20 +116,21 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sofia_pro_regular"
                 android:paddingTop="6dp"
-                android:text="Item purchased"
+                android:text="@string/transactionDetails"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/txt_transaction_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:text="45"
                     android:textSize="25dp"
+                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/sofia_pro_semi_bold"
                     android:gravity="end"
@@ -137,6 +138,17 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
+        <ProgressBar
+            android:id="@+id/progress_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+
+        </ProgressBar>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
