--- a/grabbit/app/src/main/res/layout/activity_transaction_details_page.xml
+++ b/grabbit/app/src/main/res/layout/activity_transaction_details_page.xml
@@ -23,6 +23,7 @@
             android:textSize="24sp"/>
     </com.google.android.material.appbar.AppBarLayout>
     <ScrollView
+        android:layout_margin="10dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
